kube/yaml/gitlab-statefulset.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-server
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/proxy-redirect-from: ~^http://(.+)$
    nginx.ingress.kubernetes.io/proxy-redirect-to: http://$1
    nginx.ingress.kubernetes.io/rewrite-target: /gitlab-server/
spec:
  rules:
  - http:
      paths:
      - path: /gitlab-server/
        pathType: Prefix
        backend:
          service:
            name: gitlab-server
            port:
              number: 80
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    k8s-app: gitlab-server
  name: gitlab-server
  namespace: kube-system
spec:
  serviceName: gitlab-server
  replicas: 1
  selector:
    matchLabels:
      k8s-app: gitlab-server
  template:
    metadata:
      labels:
        k8s-app: gitlab-server
    spec:
      securityContext:
        fsGroup: 1000 
      containers:
        - name: gitlab
          image: gitlab/gitlab-ce:latest
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 22
          volumeMounts:
            - name: gitlab-cfg
              mountPath: /etc/gitlab
            - name: gitlab-log
              mountPath: /var/log/gitlab
            - name: gitlab-data
              mountPath: /var/opt/gitlab  
  volumeClaimTemplates:
  - metadata:
      name: gitlab-cfg
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: gitlab-cfg-storage
      resources:
        requests:
          storage: 5Gi
  - metadata:
      name: gitlab-log
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: gitlab-log-storage
      resources:
        requests:
          storage: 10Gi
  - metadata:
      name: gitlab-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: gitlab-data-storage
      resources:
        requests:
          storage: 20Gi

---
# ------------------- Gitlab Service ------------------- #

kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: gitlab-server
  name: gitlab-server
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: ssh
      port: 22
      targetPort: 22
    - name: https
      port: 443
      targetPort: 443
  selector:
    k8s-app: gitlab-server
