kube/yaml/nexus3-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-server
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/proxy-redirect-from: ~^http://(.+)$
    nginx.ingress.kubernetes.io/proxy-redirect-to: http://$1
    nginx.ingress.kubernetes.io/rewrite-target: /nexus-server/
    #nginx.ingress.kubernetes.io/app-root: /nexus/
    #kubernetes.io/ingress.class: traefik
    #traefik.ingress.kubernetes.io/app-root: /nexus-server/
    #traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /nexus-server/
        pathType: Prefix
        backend:
          service:
            name: nexus-server
            port:
              number: 80
